--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -2,7 +2,7 @@
     <div class="container">
         <a class="navbar-brand" href="#">Dating App</a>
 
-        <ul *ngIf="loggedIn" class="navbar-nav me-auto mb-2 mb-md-0">
+        <ul *ngIf="accountService.currentUser$ | async" class="navbar-nav me-auto mb-2 mb-md-0">
             <li class="nav-item">
                 <a class="nav-link" href="#">Matches</a>
             </li>
@@ -12,12 +12,9 @@
             <li class="nav-item">
                 <a class="nav-link">Messages</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" (click)="logout()">Logout</a>
-            </li>
         </ul>
 
-        <div *ngIf="loggedIn" class="dropdown"  dropdown>
+        <div *ngIf="accountService.currentUser$ | async" class="dropdown"  dropdown>
             <a class="dropdown-toggle text-light" dropdownToggle>Welcom user</a>
             <div class="dropdown-menu mt-3" *dropdownMenu>
                 <a class="dropdown-item">Edit Profile</a>
@@ -26,7 +23,7 @@
             </div>
         </div>
 
-        <form *ngIf="!loggedIn" #loginForm="ngForm" class="d-flex" (ngSubmit)="login()" autocomplete="off">
+        <form *ngIf="(accountService.currentUser$ | async) === null" #loginForm="ngForm" class="d-flex" (ngSubmit)="login()" autocomplete="off">
             <input 
                 name="username"
                 [(ngModel)]="model.username"
